@@ -545,6 +545,8 @@ public $OnLoad = true;
 public $OnShow = true;
 public $IncludePath = array();
 public $ExtendedMethods = array();
+public $TplStoreMain = array();
+public $TplStoreSub = array();
 // Private
 public $_ErrMsgName = '';
 public $_LastFile = '';
@@ -661,6 +663,7 @@ function SetOption($o, $v=null, $d=null) {
 			}
 		}
 	}
+	if (isset($o['render'])) $this->Render = $o['render'];
 }
 
 function GetOption($o) {
@@ -684,6 +687,7 @@ function GetOption($o) {
 		return $x;
 	}
 	if ($o=='include_path') return $this->IncludePath;
+	if ($o=='render') return $this->Render;
 	return $this->meth_Misc_Alert('with GetOption() method','option \''.$o.'\' is not supported.');;
 }
 
@@ -983,14 +987,14 @@ function meth_Locator_FindTbs(&$Txt,$Name,$Pos,$ChrSub) {
 	} else {
 		$Loc->FullName = $Name;
 	}
-	if ($ReadPrm and isset($Loc->PrmLst['comm'])) {
+	if ( $ReadPrm && ( isset($Loc->PrmLst['enlarge']) || isset($Loc->PrmLst['comm']) ) ) {
 		$Loc->PosBeg0 = $Loc->PosBeg;
 		$Loc->PosEnd0 = $Loc->PosEnd;
-		$comm = $Loc->PrmLst['comm'];
-		if (($comm===true) or ($comm==='')) {
+		$enlarge = (isset($Loc->PrmLst['enlarge'])) ? $Loc->PrmLst['enlarge'] : $Loc->PrmLst['comm'];
+		if (($enlarge===true) || ($enlarge==='')) {
 			$Loc->Enlarged = self::f_Loc_EnlargeToStr($Txt,$Loc,'<!--' ,'-->');
 		} else {
-			$Loc->Enlarged = self::f_Loc_EnlargeToTag($Txt,$Loc,$comm,false);
+			$Loc->Enlarged = self::f_Loc_EnlargeToTag($Txt,$Loc,$enlarge,false);
 		}
 	}
 
@@ -1080,7 +1084,7 @@ function &meth_Locator_SectionNewBDef(&$LocR,$BlockName,$Txt,$PrmLst,$Cache) {
 			if ($IsAtt) {
 				$Pos = $Loc->PrevPosBeg;
 				if ($IsAMF) $PrevIsAMF = true;
-			} elseif ($Loc->Enlarged) { // Parameter 'comm'
+			} elseif ($Loc->Enlarged) {
 				$Pos = $Loc->PosBeg0+1;
 				$Loc->Enlarged = false;
 			} else {
@@ -1443,8 +1447,7 @@ function meth_Locator_Replace(&$Txt,&$Loc,&$Value,$SubStart) {
 		$CurrVal = '';
 		if ($x!=='') {
 			if ($this->f_Misc_GetFile($CurrVal, $x, $this->_LastFile, $this->IncludePath)) {
-				if (isset($Loc->PrmLst['getbody'])) $CurrVal = $this->f_Xml_GetPart($CurrVal,$Loc->PrmLst['getbody'],true);
-				if (isset($Loc->PrmLst['rename'])) $this->meth_Locator_Rename($CurrVal, $Loc->PrmLst['rename']);
+				$this->meth_Locator_PartAndRename($CurrVal, $Loc->PrmLst);
 			} else {
 				if (!isset($Loc->PrmLst['noerr'])) $this->meth_Misc_Alert($Loc,'the file \''.$x.'\' given by parameter file is not found or not readable.',true);
 			}
@@ -1466,8 +1469,7 @@ function meth_Locator_Replace(&$Txt,&$Loc,&$Value,$SubStart) {
 				if (!isset($Loc->PrmLst['noerr'])) $this->meth_Misc_Alert($Loc,'the file \''.$x.'\' given by parameter script is not found or not readable.',true);
 			}
 			if ($sub) $this->meth_Misc_ChangeMode(false,$Loc,$CurrVal);
-			if (isset($Loc->PrmLst['getbody'])) $CurrVal = $this->f_Xml_GetPart($CurrVal,$Loc->PrmLst['getbody'],true);
-			if (isset($Loc->PrmLst['rename'])) $this->meth_Locator_Rename($CurrVal, $Loc->PrmLst['rename']);
+			$this->meth_Locator_PartAndRename($CurrVal, $Loc->PrmLst);
 			unset($this->CurrPrm);
 			$ConvProtect = false;
 		}
@@ -1647,29 +1649,56 @@ function meth_Locator_FindBlockNext(&$Txt,$BlockName,$PosBeg,$ChrSub,$Mode,&$P1,
 
 }
 
-function meth_Locator_Rename(&$Txt, $Replace) {
-// Rename or delete TBS tags names
-	if (is_string($Replace)) $Replace = explode(',',$Replace);
-	foreach ($Replace as $x) {
-		if (is_string($x)) $x = explode('=', $x);
-		if (count($x)==2) {
-			$old = trim($x[0]);
-			$new = trim($x[1]);
-			if ($old!=='') {
-				if ($new==='') {
-					$q = false;
-					$s = 'clear';
-					$this->meth_Merge_Block($Txt, $old, $s, $q, false, false, false);
-				} else {
-					$old = $this->_ChrOpen.$old;
-					$old = array($old.'.', $old.' ', $old.';', $old.$this->_ChrClose);
-					$new = $this->_ChrOpen.$new;
-					$new = array($new.'.', $new.' ', $new.';', $new.$this->_ChrClose);
-					$Txt = str_replace($old,$new,$Txt);
+function meth_Locator_PartAndRename(&$CurrVal, &$PrmLst) {
+
+	// Store part
+	if (isset($PrmLst['store'])) {
+		$storename = (isset($PrmLst['storename'])) ? $PrmLst['storename'] : 'getpart';
+		if (!isset($this->$TplStore[$storename])) $this->$TplStore[$storename] = '';
+		$this->$TplStore[$storename] .= $this->f_Xml_GetPart($CurrVal, $PrmLst['store'], false);
+	}
+
+	// Get part
+	if (isset($PrmLst['getpart'])) {
+		$part = $PrmLst['getpart'];
+	} elseif (isset($PrmLst['getbody'])) {
+		$part = $PrmLst['getbody'];
+	} else {
+		$part = false;
+	}
+	if ($part!=false) {
+		$CurrVal = $this->f_Xml_GetPart($CurrVal, $part, true);
+	}
+
+	// Rename or delete TBS tags names
+	if (isset($PrmLst['rename'])) {
+	
+		$Replace = $PrmLst['rename'];
+
+		if (is_string($Replace)) $Replace = explode(',',$Replace);
+		foreach ($Replace as $x) {
+			if (is_string($x)) $x = explode('=', $x);
+			if (count($x)==2) {
+				$old = trim($x[0]);
+				$new = trim($x[1]);
+				if ($old!=='') {
+					if ($new==='') {
+						$q = false;
+						$s = 'clear';
+						$this->meth_Merge_Block($CurrVal, $old, $s, $q, false, false, false);
+					} else {
+						$old = $this->_ChrOpen.$old;
+						$old = array($old.'.', $old.' ', $old.';', $old.$this->_ChrClose);
+						$new = $this->_ChrOpen.$new;
+						$new = array($new.'.', $new.' ', $new.';', $new.$this->_ChrClose);
+						$CurrVal = str_replace($old,$new,$CurrVal);
+					}
 				}
 			}
-		}
-	} 
+		} 
+
+	}
+
 }
 
 function meth_Locator_FindBlockLst(&$Txt,$BlockName,$Pos,$SpePrm) {
@@ -2284,13 +2313,26 @@ function meth_Merge_AutoSpe(&$Txt,&$Loc) {
 		case 'tplvars':
 			if ($Loc->SubNbr==2) {
 				$SubStart = 2;
-				$x = implode(',',array_keys($this->TplVars));
+				$x = implode(',',array_keys($this->TplVars)); // list of all template variables
 			} else {
 				if (isset($this->TplVars[$Loc->SubLst[2]])) {
 					$SubStart = 3;
 					$x = &$this->TplVars[$Loc->SubLst[2]];
 				} else {
 					$ErrMsg = 'property TplVars doesn\'t have any item named \''.$Loc->SubLst[2].'\'.';
+				}
+			}
+			break;
+		case 'store':
+			if ($Loc->SubNbr==2) {
+				$SubStart = 2;
+				$x = implode('',$this->TplStore); // contatenation of all stores
+			} else {
+				if (isset($this->TplStore[$Loc->SubLst[2]])) {
+					$SubStart = 3;
+					$x = &$this->TplStore[$Loc->SubLst[2]];
+				} else {
+					$ErrMsg = 'Store named \''.$Loc->SubLst[2].'\' is not defined yet.';
 				}
 			}
 			break;
@@ -3876,7 +3918,7 @@ static function f_Xml_Max(&$Txt,&$Nbr,$MaxEnd) {
 
 }
 
-static function f_Xml_GetPart(&$Txt,$TagLst,$AllIfNothing=false) {
+static function f_Xml_GetPart(&$Txt, $TagLst, $AllIfNothing=false) {
 // Returns parts of the XML/HTML content, default is BODY.
 
 	if (($TagLst===true) or ($TagLst==='')) $TagLst = 'body';
@@ -3899,9 +3941,10 @@ static function f_Xml_GetPart(&$Txt,$TagLst,$AllIfNothing=false) {
 	$PosOut = strlen($Txt);
 	$Pos = 0;
 	
+	// Optimized search for all tag types
 	do {
 
-		// Search new positions
+		// Search next positions of each tag type
 		$TagMin = false;
 		$PosMin = $PosOut;
 		foreach ($TagLst as $i=>$Tag) {
@@ -3922,7 +3965,7 @@ static function f_Xml_GetPart(&$Txt,$TagLst,$AllIfNothing=false) {
 			}
 		}
 
-		// Add the part
+		// Add the part of tag types
 		if ($TagMin!==false) {
 			$Tag = &$TagLst[$TagMin];
 			$Pos = $Tag['e']+1;
